--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "Njk0NDc2ODUyMjgyMTMwNDU1.XrfrSQ.tjWIZy0yqjWCyX7MGN8vd03lGRc",
+	"token": "token",
 	"mcIP": "51.89.235.93",
 	"mcPort": "25587"
 }
