--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"token": "token",
-	"mcIP": "51.89.235.93",
-	"mcPort": "25587"
+	"mcIP": "minecraft server ip",
+	"mcPort": "minecraft server port"
 }
