--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "token",
+	"token": "NzE3NjgxMzUwNjY4MzIwODcx.XtkzGQ.Pm987avL2nR2ZD8us0LmObZ0B7Y",
 	"mcIP": "minecraft server ip",
 	"mcPort": "minecraft server port"
 }
