clean up, sumthin's up with db

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "token",
-	"mcIP": "minecraft server ip",
-	"mcPort": "minecraft server port"
+	"token": "Njk0NDc2ODUyMjgyMTMwNDU1.Xr0KDw.Q3r_kaFz_npmGbyl4OA2yN6sL54",
+	"mcIP": "nigga.no",
+	"mcPort": "22565"
 }
