--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "discord.js": "11.4.2",
-    "systeminformation": "^4.25.1",
     "fast-average-color": "^6.0.0",
-    "random-puppy": "^1.1.0",
     "mongodb": "^3.5.7",
-    "request": "^2.88.2"
+    "random-puppy": "^1.1.0",
+    "request": "^2.88.2",
+    "systeminformation": "^4.25.1"
   }
 }
