--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "metrix",
   "version": "4.28.6a-42",
   "scripts": {
-    "start": "node main.js"
+    "start": "node ./main.js"
   },
   "dependencies": {
     "child_process": "^1.0.2",
-    "discord.js": "11.4.2",
+    "discord.js": "^12.2.0",
     "fast-average-color": "^6.0.0",
     "ffmpeg": "0.0.4",
     "mongodb": "^3.5.7",
+    "nodemon": "^2.0.4",
     "random-puppy": "^1.1.0",
     "request": "^2.88.2",
     "systeminformation": "^4.25.1"
