--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "metrix",
-  "version": "4.28.6a-42",
+  "version": "5.40.0b",
   "scripts": {
-    "start": "node ./main.js"
+    "start": "node ./index.js"
   },
   "dependencies": {
     "child_process": "^1.0.2",
