--- a/config.json
+++ b/config.json
@@ -1,8 +1,5 @@
 {
-	"token1": "NzE3NjgxMzUwNjY4MzIwODcx.Xt4WEA.4HYhSpBQFthbQ2ulCV08qgJnnFU", 
-	"token": "Njk0NDc2ODUyMjgyMTMwNDU1.XoML-A.AE6cwHahkTE28UWBjqbvn4e7KCM",
-	"token3": "NzM0NDk3NTUxMjE0MTgyNDQx.XxSkQA.htq5fEtzGJplsBHQzAJ7CkomzDA",
-	"osuapi": "06d3d1a881d4b71db922a56a9dbe18179912f7a1",
-	"ppadictapi": "3a91ec72fa644977b1d50f4c6f879dc5",
-	"owner": "224271118653980692"
+	"token": "bot-token-here", 
+	"osuapi": "osu-api-token-here",
+	"owner": "owner-user-id-here"
 }
